#124 - Corrects gradients behind image captions

--- a/themes/main/src/sass/nacional.scss
+++ b/themes/main/src/sass/nacional.scss
@@ -86,6 +86,13 @@
     position: absolute;
     bottom: 10px;
     padding: 0 10px;
+    background: rgba(19,19,19,0);
+    background: -moz-linear-gradient(top, rgba(19,19,19,0) 0%, rgba(0,0,0,1) 85%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(19,19,19,0)), color-stop(85%, rgba(0,0,0,1)));
+    background: -webkit-linear-gradient(top, rgba(19,19,19,0) 0%, rgba(0,0,0,1) 85%);
+    background: -o-linear-gradient(top, rgba(19,19,19,0) 0%, rgba(0,0,0,1) 85%);
+    background: -ms-linear-gradient(top, rgba(19,19,19,0) 0%, rgba(0,0,0,1) 85%);
+    background: linear-gradient(to bottom, rgba(19,19,19,0) 0%, rgba(0,0,0,1) 85%);
   }
 
   img {
@@ -316,7 +323,13 @@
     width: 100%;
     padding-bottom: 20px;
     padding-top: 5px;
-    background: linear-gradient(to top, rgba(16, 16, 16, 0.6) 0%, rgba(16,16,16,0.20 ) 100%);
+    background: rgba(19,19,19,0);
+    background: -moz-linear-gradient(top, rgba(19,19,19,0) 0%, rgba(0,0,0,1) 85%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(19,19,19,0)), color-stop(85%, rgba(0,0,0,1)));
+    background: -webkit-linear-gradient(top, rgba(19,19,19,0) 0%, rgba(0,0,0,1) 85%);
+    background: -o-linear-gradient(top, rgba(19,19,19,0) 0%, rgba(0,0,0,1) 85%);
+    background: -ms-linear-gradient(top, rgba(19,19,19,0) 0%, rgba(0,0,0,1) 85%);
+    background: linear-gradient(to bottom, rgba(19,19,19,0) 0%, rgba(0,0,0,1) 85%);
 
     .title, .credits {
       margin-left: 10px;
@@ -431,12 +444,13 @@
     padding-left: 5px;
     right: 18px;
     height: 75px;
-    background: linear-gradient(
-          to left,
-          rgba(16, 16, 16, 1),
-          rgba(16, 16, 16, 0.2) 55%,
-          transparent
-          );
+    background: rgba(19,19,19,0);
+    background: -moz-linear-gradient(top, rgba(19,19,19,0) 0%, rgba(0,0,0,1) 85%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(19,19,19,0)), color-stop(85%, rgba(0,0,0,1)));
+    background: -webkit-linear-gradient(top, rgba(19,19,19,0) 0%, rgba(0,0,0,1) 85%);
+    background: -o-linear-gradient(top, rgba(19,19,19,0) 0%, rgba(0,0,0,1) 85%);
+    background: -ms-linear-gradient(top, rgba(19,19,19,0) 0%, rgba(0,0,0,1) 85%);
+    background: linear-gradient(to bottom, rgba(19,19,19,0) 0%, rgba(0,0,0,1) 85%);
   }
 
   &::before {
